--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test='shoppingList'>BMW</li>
+		<li data-ns-test='shoppingList'>Porsche</li>
+		<li data-ns-test='shoppingList'>Ferrari</li>
+	</ol>
+	<ul>
+		<li data-ns-test='holidayList'>Manali</li>
+		<li data-ns-test='holidayList'>Osaka</li>
+		<li data-ns-test='holidayList'>Kyoto</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
